# Medical-Image-Processing

./: CMakeLists.txt  MedicalImageProcessing.cpp  MedicalImageProcessing.h  MedicalImageProcessing.qrc  MedicalImageProcessing.ui  README.md  main.cpp  skeleton.cpp  skeleton.h  skeleton.ui
